# rubber

./: CMakeLists.txt  rubber.cpp  rubber.inp
